# COMP258-NeuralNetwork

./: Exercise2.ipynb  README.md  pyproject.toml
.ipynb_checkpoints/: Exercise2-checkpoint.ipynb
week01-lab/: MPExample.ipynb
week02-lab/: Derivatives_Ex2.ipynb  HebbRuleExample.ipynb  PerceptronExample1.ipynb  PerceptronExample2.ipynb
week03-Assignment/: Exercise1.ipynb  Exercise2.ipynb  Exercise2.py  Lab Assignment 1_W24.docx  hepatitis_testing_data.json  requirements.txt
week03-lab/: AdalineTest.ipynb  SGDTest.ipynb  network1.ipynb  network1.py
week04-lab/: SGDTest.ipynb  SurfacePlotTest.ipynb  network1.ipynb
week05-lab/: FunctionalAPITest.ipynb  RegressionMLPTest.ipynb  TensorFlowKerasTest.ipynb  fashionMnist.ipynb  my_keras_model.h5  my_keras_weights.ckpt.data-00000-of-00001  my_keras_weights.ckpt.index
week06-Assignment/: Exercise1.ipynb  Exercise2.ipynb  Lab Assignment 2_W24 (1).docx
week06-lab/: 11_training_deep_neural_networks.ipynb  my_model_A.h5
week07-Test/: SinaSarsharPour_COMP-258_MidTermTest_W2024_Exercise1.ipynb  SinaSarsharPour_COMP-258_MidTermTest_W2024_Exercise2.ipynb  mushroom_data.csv  mushroom_data_meta.txt
week07-lab/: Week7LabSessionSolution.ipynb
week08-lab/: 13_loading_and_preprocessing_data.ipynb  my_contacts.tfrecord  my_data_with_features.tfrecords  tfrecord.ipynb
week09-lab/: Convolution and pooling operation.ipynb  FilterExample.ipynb
week10-Assignment/: Exercise01.ipynb
week10-lab/: 14_deep_computer_vision_with_cnns1.ipynb
week11-lab/: 15_processing_sequences_using_rnns_and_cnns.ipynb
(+23 files in other folders)
