[tool.poetry]
name = "comp258"
version = "0.1.0"
description = "All projects done for COMP-258: Neural Network course taken on Winter 2024"
authors = ["sinapy <47465748+sinapy@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "=3.10"
tensorflow = "~2.10"
matplotlib = "^3.8.2"
pandas = "^2.2.0"
mlxtend = "^0.23.1"
ucimlrepo = "^0.0.3"
imageio = "^2.34.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
tensorflow-io-gcs-filesystem = "0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
